; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/apr/file_io/unix/extr_readwrite.c_file_printf_flush.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/apr/file_io/unix/extr_readwrite.c_file_printf_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apr_file_printf_data = type { i64, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @file_printf_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @file_printf_flush(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.apr_file_printf_data*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = bitcast i32* %5 to %struct.apr_file_printf_data*
  store %struct.apr_file_printf_data* %6, %struct.apr_file_printf_data** %4, align 8
  %7 = load %struct.apr_file_printf_data*, %struct.apr_file_printf_data** %4, align 8
  %8 = getelementptr inbounds %struct.apr_file_printf_data, %struct.apr_file_printf_data* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.apr_file_printf_data*, %struct.apr_file_printf_data** %4, align 8
  %11 = getelementptr inbounds %struct.apr_file_printf_data, %struct.apr_file_printf_data* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load %struct.apr_file_printf_data*, %struct.apr_file_printf_data** %4, align 8
  %14 = getelementptr inbounds %struct.apr_file_printf_data, %struct.apr_file_printf_data* %13, i32 0, i32 1
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.apr_file_printf_data*, %struct.apr_file_printf_data** %4, align 8
  %18 = getelementptr inbounds %struct.apr_file_printf_data, %struct.apr_file_printf_data* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = sub nsw i64 %16, %19
  %21 = call i64 @apr_file_write_full(i32 %9, i64 %12, i64 %20, i32* null)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %31

24:                                               ; preds = %1
  %25 = load %struct.apr_file_printf_data*, %struct.apr_file_printf_data** %4, align 8
  %26 = getelementptr inbounds %struct.apr_file_printf_data, %struct.apr_file_printf_data* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.apr_file_printf_data*, %struct.apr_file_printf_data** %4, align 8
  %29 = getelementptr inbounds %struct.apr_file_printf_data, %struct.apr_file_printf_data* %28, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  store i64 %27, i64* %30, align 8
  store i32 0, i32* %2, align 4
  br label %31

31:                                               ; preds = %24, %23
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i64 @apr_file_write_full(i32, i64, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
